k8s/disabled/cross-seed/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - name: http
      port: 2468
      protocol: TCP
      targetPort: http
