k8s/disabled/cross-seed/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  tls:
    - hosts:
        - cross-seed.k8s.javydekoning.com
  rules:
    - host: cross-seed.k8s.javydekoning.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cross-seed-service
                port:
                  name: http
